k8/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: spring-k8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-gateway
  template:
    metadata:
      labels:
        app: cloud-gateway
    spec:
      containers:
        - name: cloud-gateway
          image: cloud-gateway:1.0.0
          ports:
            - containerPort: 9762

---
apiVersion: v1
kind: Service
metadata:
  name: cloud-gateway-service
  namespace: spring-k8
spec:
  type: LoadBalancer
  selector:
    app: cloud-gateway
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 9762
